--- a/web/graduate.html
+++ b/web/graduate.html
@@ -15,6 +15,11 @@
 <body class="container">
   <h1>A Simple Hello World Voting Application</h1>
 
+  <div class="field-wrap">
+    <label for="contract-address">계약서 주소</label>
+    <input type="text" name="contract-address" id="contract-address" />
+  </div>
+
   <div>
     <h1>졸업 증명 추가</h1>
 
