--- a/web/graduate.html
+++ b/web/graduate.html
@@ -47,6 +47,14 @@
         </label>
         <input id="student-password" type="password" required autocomplete="off" />
       </div>
+
+      <div class="field-wrap">
+        <label>
+          이메일
+        </label>
+        <input id="student-email" type="email" required autocomplete="off" />
+      </div>
+
       <button id="issue" class="button button-block" />올리기</button>
     </div>
   </div>
